# dotfiles

./: .gitignore  Xresources  emacs  ghci  gitconfig  install.sh  latexmkrc  path.sh  pikaur.conf  readme.md  redshift.conf  start-xmonad.sh  vimrc  xinitrc  zshrc
dunst/: dunstrc
firefox/: user.js
fish/: config.fish
fish/functions/: colorman.fish  expand_dots.fish  fish_prompt.fish  install_git_abbr.fish
fonts/: license.md
kitty/: kitty.conf
nvim/: .gitignore  init.vim
nvim/autoload/airline/themes/: dracula.vim
nvim/ftplugin/: c.vim  cpp.vim  erlang.vim  haskell.vim  php.vim  purescript.vim  python.vim  tex.vim
nvim/snippets/: cpp.snippets
nvim/syntax/: haskell.vim
oh-my-zsh/: oh-my-zsh
pacaur/: config
rofi/: config
system_install/: base.sh  install.sh  install_userland.sh  readme.md  useful.sh  user.sh
termite/: config
trizen/: trizen.conf
urxvt/ext/: vtwheel
vim/: .gitignore
vim/ftplugin/: c.vim  haskell.vim
vim/snippets/: haskell.snippets
xkb/: cz-prog.xkb  readme.md
xkb/symbols/: cz-prog
xmonad/: .gitignore  Makefile  readme.md  stack.yaml  volume.sh  xmobar.hs  xmonad.hs  xxmonad.cabal
zsh/: readme.md
zsh/lib/: arch_linux.zsh  completion.zsh  directories.zsh  functions.zsh  history.zsh  misc.zsh  prompt.zsh  stack.zsh  sudo.zsh
zsh/plugins/gpg-agent/: gpg-agent.plugin.zsh
