name:                xxmonad
version:             0.1.0.0
cabal-version:       >= 1.10
build-type:          Simple

executable xmonad
  hs-source-dirs:      .
  main-is:             xmonad.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , xmonad
                     , xmonad-contrib
                     , xmonad-extras
                     , X11
                     , utf8-string
  default-language:    Haskell2010
